# epcltvapp

./: .gitignore  .gitmodules  CLAUDE.md  DEVELOPMENT.md  LICENSE  PrivacyPolicy.txt  README.md  WIP.md  build.gradle  settings.gradle
.github/workflows/: release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aribcaption_jni.cpp  tsreadex_jni.cpp
app/src/main/java/com/daigorian/epcltvapp/: AribCaptionFilter.kt  AribGenre.kt  BrowseErrorActivity.kt  CaptionImage.kt  CardPresenter.kt  CustomUrlAction.kt  DeleteEnabledArrayObjectAdapter.kt  DetailsActivity.kt  Movie.kt  (+32 more)
app/src/main/res/drawable/: ic_action_audio_track_main.xml  ic_action_audio_track_sub.xml  ic_action_info.xml  ic_action_superimpose_off.xml  ic_action_superimpose_on.xml  ic_settings_connection.xml  ic_settings_image.xml  ic_settings_player.xml  ic_settings_power.xml  ic_settings_reload.xml  ic_settings_sort_asc.xml  ic_settings_sort_desc.xml  ic_settings_unfold_less.xml  ic_settings_unfold_more.xml  ic_sidebar_calendar.xml  ic_sidebar_clock.xml  ic_sidebar_live.xml  ic_sidebar_rec.xml  ic_sidebar_search.xml  ic_sidebar_settings.xml
app/src/main/res/layout/: activity_search.xml  activity_settings.xml  dialog_program_info.xml  item_settings_card.xml  video_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ja-rJP/: strings.xml
app/src/main/res/xml/: preference_single_line_edittext.xml  preferences.xml
gradle/wrapper/: gradle-wrapper.properties
release-notes/: v1.29.md  v1.30.md  v1.31.md  v1.32.md
(+36 files in other folders)
